--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
   </header>
 
   <main>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeEnCHoXxE1NaXR4V4CL1vawBDKis5lKSNE0gKD5SIBaOAVag/viewform?embedded=true" allowfullscreen>Loading…</iframe>
-    <p style="margin-top: 20px; font-size: 16px;">After submitting the form, please email your current resume to <strong>primeedgecareers@gmail.com</strong>.</p>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe29Saru0ch-ycEvZRDAW-I2NFNVQCwp-9dYyviYpQmdtYY-A/viewform?embedded=true" width="640" height="2324" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </main>
 
   <footer>
